Thu May 19 14:31:39 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/DataReaderImpl.cpp:
        * dds/DCPS/DataWriterImpl.cpp:
        * dds/DCPS/Definitions.h:
        * dds/DCPS/RTPS/BaseMessageUtils.h:
        * dds/DCPS/RTPS/RtpsMessageTypes.idl:
        * dds/DCPS/RTPS/md5.cpp:
        * dds/DCPS/transport/framework/TransportReassembly.h:
        * dds/DCPS/transport/framework/TransportReceiveStrategy.h:
        * dds/idl/CPPTemplate.txt:
        * dds/idl/marshal_generator.cpp:
        * tests/DCPS/KeyTest/md5_test.cpp:
        * tests/DCPS/KeyTest/run_test.pl:
        * tests/transport/dds_comparative/SubReader.cpp:
        * tests/transport/simple_bp_rm/SimpleDataReader.cpp:

          Clean up from yesterday's merge.  Fuzz and portability problems.

Thu May 19 14:23:50 UTC 2011  Mike Martinez  <martinez_m@ociweb.com>

        * dds/DCPS/Definitions.h:

          Change literal to explicitly be a 64 bit value.

Wed May 18 21:32:29 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * Merged the branch "RTPS", which includes the start of the DDS
          Interoperability specification (OMG formal/2010-11-01).  This
          is not yet a complete implementation, but it contains changes
          that impact the existing OpenDDS transport protocol, including
          64-bit sequence numbers, support for fragmentation and
          reassembly in UDP-based transports, and the ability to marshal
          only the key fields for registration/unregistration/disposal
          messages.  For full details of the changes see the branch-specific
          change log at docs/history/ChangeLog-RTPS-1.

Wed May 18 20:27:01 UTC 2011  Jeff Schmitz  <schmitz_j@ociweb.com>

        * dds/DCPS/ZeroCopySeq_T.cpp:

          set length properly when changing from a zero copy sequence to
          a single copy sequence.

        * tests/DCPS/ZeroCopyRead/main.cpp:

          test above change.

Wed May 18 18:01:58 UTC 2011  Byron Harris  <harrisb@ociweb.com>
